--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ cmake_install.cmake
 cmake_export.cmake
 CMakePresets.json
 CMakeUserPresets.json
+CMakePresets.template.json
 
 # Ninja files
 build-ninja-*/
